--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         body {background-color: black; color: white;}
         a {filter: invert(1) brightness(0.5) invert(1);}
       }
+      code, pre {
+        background-color: #6666;
+        padding: 2px;
+      }
+      pre code {
+        background-color: #0000;
+      }
     </style>
     <script src="https://cdn.rawgit.com/showdownjs/showdown/1.9.1/dist/showdown.min.js"></script>
     <script>
