--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       }
       pre code {
         background-color: #0000;
+        padding: 0px;
       }
     </style>
     <script src="https://cdn.rawgit.com/showdownjs/showdown/1.9.1/dist/showdown.min.js"></script>
