Replace .innerHTML with .innerText setting title
Fixes #5

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           console.log(this);
         }
         document.getElementById('readme').innerHTML = html;
-        document.title = document.getElementById('readme').children[0].innerHTML;
+        document.title = document.getElementById('readme').children[0].innerText;
       }
 
       function main() {
