--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         }
         document.getElementById('readme').innerHTML = html;
         document.title = document.getElementById('readme').children[0].innerText;
+        if(location.href.split('#').length > 1){location.href=location.href}
       }
 
       function main() {
