Manual font family selector
Fixes #3

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
           default:
             document.body.style.maxWidth="";
         }
+        fontFamily = document.getElementById('font-family').selectedOptions[0].innerText;
+        document.body.style.fontFamily=fontFamily;
       }
 
       function main() {
