--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       code, pre {
         background-color: #6666;
         padding: 2px;
+        display: inline-block;
       }
       pre code {
         background-color: #0000;
