--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
       function reqListener () {
         if ((this.status >= 200 && this.status < 300) || this.status == 304)  {
           html = converter.makeHtml(this.responseText);
+          makeFaviconText(document.title);
         }else{
           html += "Status " + this.status;
+          makeFaviconText('❌');
           console.log(this);
         }
         document.getElementById('readme').innerHTML = html;
         document.title = document.getElementById('readme').children[0].innerText;
-        makeFaviconText(document.title);
         if(location.href.split('#').length > 1){location.href=location.href}
 
       }
