Added dark <input> for target.md field

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <style type="text/css" media="(prefers-color-scheme: dark)">
       body {background-color: black; color: white;}
       a {filter: invert(1) brightness(0.5) invert(1);}
-      select, button {filter: invert(1);}
+      select, button, input {filter: invert(1);}
     </style>
     <style type="text/css" media="(prefers-color-scheme: never)">
       body {background-color: red;}
