--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ for (i in getPairs) {
   getParams[getPairs[i].split('=')[0]] = getPairs[i].split('=')[1];
 }
 
-targetMD = 'README.md';
-if ('target.md' in getParams){
-  targetMD = getParams['target.md'];
+fileToRender = 'README.md';
+if ('fileToRender' in getParams){
+  fileToRender = getParams['fileToRender'];
 }
 converter = new showdown.Converter();
-html = converter.makeHtml('loading ``' + targetMD + '`` ...');
+html = converter.makeHtml('loading ``' + fileToRender + '`` ...');
 
 function makeFaviconText(textIn) {
   document.querySelector('link[rel~="icon"]').href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text paint-order="stroke" stroke="white" stroke-width="16" fill="black" font-stretch="ultra-condensed" font-family="mono" y=".9em" font-size="90">' + textIn + '</text></svg>';
@@ -46,11 +46,11 @@ function makeFaviconText(textIn) {
 makeFaviconText('⏳');
 
 function reqListener () {
-  document.getElementById('readme').innerHTML = converter.makeHtml(this.responseText);
-  document.title = document.getElementById('readme').children[0].innerText;
+  document.getElementById('renderedMarkdown').innerHTML = converter.makeHtml(this.responseText);
+  document.title = document.getElementById('renderedMarkdown').children[0].innerText;
   makeFaviconText(document.title);
   if ((this.status < 200 || this.status > 300) && this.status != 304) {
-    document.getElementById('readme').innerHTML = converter.makeHtml('Status ' + this.status);
+    document.getElementById('renderedMarkdown').innerHTML = converter.makeHtml('Status ' + this.status);
     document.title = this.status;
     makeFaviconText('❌');
     console.log(this);
@@ -111,7 +111,7 @@ function toggleMenu () {
       }
       bigMenuHTML += '</select><br />';
     }
-    bigMenuHTML += '<input type="text" size=8 id="target.md" style="box-sizing: border-box; width:100%;" value="' + targetMD + '"><br />';
+    bigMenuHTML += '<input type="text" size=8 id="fileToRender" style="box-sizing: border-box; width:100%;" value="' + fileToRender + '"><br />';
     mDiv.innerHTML = bigMenuHTML;
   }else{
     mDiv.innerHTML = miniMenuHTML;
@@ -152,10 +152,10 @@ function settingsApply() {
       document.body.style.maxWidth='';
   }
   document.body.style.fontFamily=selectedOptions['font-family'];
-  newTarget = document.getElementById('target.md');
-  if (newTarget && newTarget.value != targetMD){
-    targetMD = newTarget.value;
-    oReq.open('GET', targetMD);
+  newTarget = document.getElementById('fileToRender');
+  if (newTarget && newTarget.value != fileToRender){
+    fileToRender = newTarget.value;
+    oReq.open('GET', fileToRender);
     oReq.send();
   }
 }
@@ -165,14 +165,14 @@ function main() {
   settingsApply();
   oReq = new XMLHttpRequest();
   oReq.addEventListener('load', reqListener);
-  oReq.open('GET', targetMD);
+  oReq.open('GET', fileToRender);
   oReq.send();
 }
     </script>
 	</head>
   <body onload="main()">
     <div id="indexmdmenu" style="float:right; max-width: 30vw; border: dotted" onchange="menuEffect()"></div>
-    <div id="readme"></div>
+    <div id="renderedMarkdown"></div>
 	</body>
 </html>
 
